--- a/reply_on_solution/config/locales/server.en.yml
+++ b/reply_on_solution/config/locales/server.en.yml
@@ -1,6 +1,7 @@
 en:
   site_settings:
     reply_on_solution_enabled: "Enabled"
+    categories: "reply_on_solution"
   discourse_automation:
     scriptables:
       reply_on_solution:
